--- a/wa.user.styl
+++ b/wa.user.styl
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/dark-whatsapp
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://raw.githubusercontent.com/vednoc/dark-whatsapp/master/wa.user.styl
-@version      2.11.0
+@version      2.12.0
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
 @license      MIT
 @preprocessor stylus
@@ -718,8 +718,8 @@ define('msg-in'  + key, val) for key, val in msg-in
         --chat-bg-r    : chat_bg_r
 
         /// Userstyle info and announcements.
-        --version: 'Dark-WhatsApp 2.11.0 — June 7th, 2020';
-        --message: 'Towards v3 of DWA! The last update broke too many things, and we are rewriting core functionality — the dark theme — so that in future updates we can reimplement currently broken DWA features – compact mode, tail styles, "private mode", etc. \A\A Fullscreen mode, custom message bubble colors, and blurred contacts are back!';
+        --version: 'Dark-WhatsApp 2.12.0 — June 12th, 2020';
+        --message: 'Towards v3 of DWA! Continuing the trend of porting old features to the latest update; check the changelog to see what is new!';
         --changes: '\A\A https://github.com/vednoc/dark-whatsapp';
 
         /// Feat -> Thin scrollbar in Firefox.
