vars: implement stylus-lang helpers for CSS vars

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -222,6 +222,26 @@ define('ac'      + key, val) for key, val in ac_hash
 define('msg-out' + key, val) for key, val in msg-out
 define('msg-in'  + key, val) for key, val in msg-in
 
+/// Stylus-lang helpers for CSS variables.
+bg0 = var(--bg-0)
+bg1 = var(--bg-1)
+bg2 = var(--bg-2)
+bg3 = var(--bg-3)
+bg4 = var(--bg-4)
+bg5 = var(--bg-5)
+fg0 = var(--fg-0)
+fg1 = var(--fg-1)
+fg2 = var(--fg-2)
+fg3 = var(--fg-3)
+fg4 = var(--fg-4)
+fg5 = var(--fg-5)
+ac0 = var(--ac-0)
+ac1 = var(--ac-1)
+ac2 = var(--ac-2)
+ac3 = var(--ac-3)
+ac4 = var(--ac-4)
+ac5 = var(--ac-5)
+
 @-moz-document domain('web.whatsapp.com') {
     // V3 exploration.
     :root:not(#z), .dark:not(#z) {
