chore: revert `scrollbar-color` check
Apparently USo doesn't like this rule, however it _does_ like
`scrollbar-width`. This check isn't even necessary these days, but hey,
why not. (^:

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -751,7 +751,7 @@ ac5 = var(--ac-5)
 
         /// Scrollbar colors.
         /\*{
-            @supports (scrollbar-color: #555 #222) {
+            @supports (scrollbar-width: thin) {
                 scrollbar-color: var(--ac-3) #88888810 i
             }
             &::-webkit-scrollbar {
