chore: remove obsolete browser prefixes

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -155,6 +155,10 @@ to_svg(input) {
 // Rounded corners.
 rad() { border-radius: arguments }
 
+/// Remove browser prefixes.
+vendors = official
+
+/// Helpers.
 t  = transparent
 i  = !important
 _d = darken
